--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,15 @@
-.App {
-  font-family: sans-serif;
+
+.spider-repos-row {
+  height: 300px;
 }
 
-button {
-  border: 0;
-  border-radius: 0.25rem;
-  background: #1E88E5;
-  color: white;
-  font-family: system-ui, sans-serif;
-  font-size: 1rem;
-  line-height: 1.2;
-  white-space: nowrap;
-  text-decoration: none;
-  padding: 0.25rem 0.5rem;
-  margin: 0.25rem;
-  cursor: pointer;
+.list-group-spider {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.list-group-item-spider {
+  padding: .4rem .6rem;
 }
 
 .spider-list {
@@ -54,4 +49,5 @@ button {
 
 .spider-codebrowser .source pre {
   margin: 4px;
+  tab-size: 3;
 }
