--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
 .spider-codebrowser {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 300px 60px 300px;
+  grid-template-rows: 300px 60px 300px 40px;
   border: 1px solid black;
 }
 
@@ -50,4 +50,10 @@
   margin: 0;
   padding: .3em;
   height: 100%;
+}
+
+.spider-codebrowser .footer {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  padding: 4px;
 }
